---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type a : int\ntype b : a\ntype c : a"
---
"a"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"b"@(FileId(1), 18..19) [Type]: alias[DefId(PackageId(0), LocalDefId(1))] of int
"c"@(FileId(1), 29..30) [Type]: alias[DefId(PackageId(0), LocalDefId(2))] of int
"<root>"@(dummy) [Module(No)]: <error>

